Adapt to jdk-1.8